--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
 .App {
   text-align: center;
+  display: flex;
+  align-items: center;
+  min-height: 600px; /* rjesenje */
+  justify-content: center;
+  color: rgb(75, 75, 75);
+  background: url('images/background.webp');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+html, body, #root, .App {
+  height: 100%;
+}
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 .App-logo {
